--- a/sub_style.css
+++ b/sub_style.css
@@ -50,38 +50,37 @@ h3,
 p {
   line-height: 1.5em;
 }
+/* -----------------------------------top-------------------------------------- */
+#back-to-top {
+  position: fixed;
+  bottom: 3em;
+  right: 3em;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #313943;
+  border: none;
+  border-radius: 5px;
+  padding: 1em;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 700;
+  box-shadow: 0 0 2em 0 rgba(0, 0, 0, 0.25);
+  transition: all 0.3s ease-in-out;
+  display: inline-block;
+  opacity: 0;
+  text-decoration: none;
+  font-size: 0.75em;
+}
 
+#back-to-top:hover {
+  background-color: #fff;
+  padding: 1em 3em;
+}
+
+#back-to-top.visible {
+  opacity: 1;
+}
 /* ----------------------------------------PC1---------------------------------- */
 @media screen and (min-width: 1550px) {
-  /* ----------------------------------------top ---------------------------------------------------*/
-  #back-to-top {
-    position: fixed;
-    bottom: 3em;
-    right: 3em;
-    background-color: rgba(255, 255, 255, 0.9);
-    color: #313943;
-    border: none;
-    border-radius: 5px;
-    padding: 1em;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: 700;
-    box-shadow: 0 0 2em 0 rgba(0, 0, 0, 0.25);
-    transition: all 0.3s ease-in-out;
-    display: inline-block;
-    opacity: 0;
-    text-decoration: none;
-    font-size: 0.75em;
-  }
-
-  #back-to-top:hover {
-    background-color: #fff;
-    padding: 1em 3em;
-  }
-
-  #back-to-top.visible {
-    opacity: 1;
-  }
   /* ----------------------------------------NEWS ---------------------------------------------------*/
 
   #newsHead {
@@ -4356,35 +4355,6 @@ p {
 /* ----------------------------------------가로--------------------------------------------- */
 
 @media screen and (min-width: 901px) and (max-width: 1200px) {
-  /* ----------------------------------------top ---------------------------------------------------*/
-  #back-to-top {
-    position: fixed;
-    bottom: 3em;
-    right: 3em;
-    background-color: rgba(255, 255, 255, 0.9);
-    color: #313943;
-    border: none;
-    border-radius: 5px;
-    padding: 1em;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: 700;
-    box-shadow: 0 0 2em 0 rgba(0, 0, 0, 0.25);
-    transition: all 0.3s ease-in-out;
-    display: inline-block;
-    opacity: 0;
-    text-decoration: none;
-    font-size: 0.75em;
-  }
-
-  #back-to-top:hover {
-    background-color: #fff;
-    padding: 1em 3em;
-  }
-
-  #back-to-top.visible {
-    opacity: 1;
-  }
   /* ----------------------------------------NEWS ---------------------------------------------------*/
 
   #newsHead {
@@ -6489,35 +6459,6 @@ p {
 /* -------------------------------------------세로----------------------------------- */
 
 @media screen and (min-width: 601px) and (max-width: 900px) {
-  /* ----------------------------------------top ---------------------------------------------------*/
-  #back-to-top {
-    position: fixed;
-    bottom: 3em;
-    right: 3em;
-    background-color: rgba(255, 255, 255, 0.9);
-    color: #313943;
-    border: none;
-    border-radius: 5px;
-    padding: 1em;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: 700;
-    box-shadow: 0 0 2em 0 rgba(0, 0, 0, 0.25);
-    transition: all 0.3s ease-in-out;
-    display: inline-block;
-    opacity: 0;
-    text-decoration: none;
-    font-size: 0.75em;
-  }
-
-  #back-to-top:hover {
-    background-color: #fff;
-    padding: 1em 3em;
-  }
-
-  #back-to-top.visible {
-    opacity: 1;
-  }
   /* ----------------------------------------NEWS ---------------------------------------------------*/
 
   #newsHead {
@@ -8634,35 +8575,6 @@ p {
 /*-------------------------------------------------------------------- mobile----------------------------------------------------------------- */
 
 @media screen and (max-width: 600px) {
-  /* ----------------------------------------top ---------------------------------------------------*/
-  #back-to-top {
-    position: fixed;
-    bottom: 3em;
-    right: 3em;
-    background-color: rgba(255, 255, 255, 0.9);
-    color: #313943;
-    border: none;
-    border-radius: 5px;
-    padding: 1em;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-weight: 700;
-    box-shadow: 0 0 2em 0 rgba(0, 0, 0, 0.25);
-    transition: all 0.3s ease-in-out;
-    display: inline-block;
-    opacity: 0;
-    text-decoration: none;
-    font-size: 0.75em;
-  }
-
-  #back-to-top:hover {
-    background-color: #fff;
-    padding: 1em 3em;
-  }
-
-  #back-to-top.visible {
-    opacity: 1;
-  }
   /* ----------------------------------------news ---------------------------------------------------*/
 
   #newsHead {
